# FinalProject

./: .gitignore  README.md  api_review.md  data_journey.md  database.md  diduseeme,txt  docker-compose.dev.yml  docker-compose.yml  kuypun.md  test_db.sh  test_db_Cargo.toml  test_db_connection.rs  walkthrough.md
.vercel/: project.json
ai/: .gitignore  Dockerfile  app.py  requirements.txt
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 001_create_fod_schema.sql  002_create_users.sql
backend/src/: auth.rs  db.rs  main.rs
db/init/: 01-extensions.sql  02-schema.sql
frontend/: .env.local  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.css  middleware.ts
frontend/src/app/: ConditionalShell.tsx  auth-context.tsx  health-context.tsx  input-config-context.tsx  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/detect/: route.ts
frontend/src/app/api/events/: route.ts
frontend/src/app/api/events_recent/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/input/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/monitoring/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: BoundingBox.tsx  Dashboard.tsx  DetectionChart.tsx  DetectionMap.tsx  DetectionMapLeaflet.tsx  DetectionTable.tsx  EventLog.tsx  Header.tsx  InputControl.tsx  KPICard.tsx  LandingPage.tsx  Navigation.tsx  RealtimeMonitoring.tsx  StatusPill.tsx
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: leaflet-heat.d.ts
(+11 files in other folders)
